--- a/css/style.scss
+++ b/css/style.scss
@@ -21,7 +21,7 @@ body {
   margin: 0 auto;
 }
 .inner {
-  max-width: 1200px;
+  max-width: 1080px;
   margin: 0 auto;
   // background: skyblue;
 }
@@ -42,11 +42,15 @@ p {
   margin: 0;
   padding: 0;
 }
+img {
+  margin: 0;
+  padding: 0;
+  vertical-align: top;
+}
 /* * * * * * * * *
 *	ヘッダー
 * * * * * * * * */
 header {
-  background: pink;
   width: 100%;
   height: 700px;
   background-size: cover;
@@ -71,7 +75,7 @@ header {
     font-weight: bold;
     display: flex;
     li {
-      margin-right: 46px;
+      margin-right: 36px;
       a {
       color: rgb(255, 255, 255);
         img {
@@ -83,10 +87,10 @@ header {
 }
 
 /* * * * * * * * *
-*	main aboutus
+*	main about_us
 * * * * * * * * */
 #aboutus {
-  margin-top: 100px;
+  margin-top: 152px;
   h2 {
     font-size: 5rem;
     margin-bottom: 20px;
@@ -97,34 +101,41 @@ header {
   }
 }
 #aboutus_a {
-  margin-top: 70px;
-  margin-bottom: 100px; //明日消す
+  // margin-top: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  img {
-    width: 365px;
-    height: 365px;
-  }
-  #ap {
-    margin-left: 20px;
-    font-size: 4rem;
-    font-weight: bold;
-    line-height: 1.55;
-    letter-spacing: 2rem;
+  #aboutus_img img{
+    width: 260px;
+    height: 340px;
+    margin-right: 15px;
   }
   #aboutus_b {
     text-align: center;
-    img {
-      width: 190px;
-      height: 70px;
+    #ap {
+      margin-top: -110px;
+      font-size: 3.3rem;
+      font-weight: bold;
+      line-height: 1.8;
+      letter-spacing: 1.7rem;
     }
     p {
-      margin-top: 82px;
+      margin-top: 111px;
       width: 463px;
-      height: 152px;
       font-size: 1.6rem;
       background: #fff;
     }
   }
+}
+#ai-1 {
+  margin-top: 118px;
+}
+#ai-2 {
+  margin-top: -20px;
+}
+/* * * * * * * * *
+*	main news
+* * * * * * * * */
+#news {
+  margin-top: 100px;
 }
