--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ img {
 
 body {
   color: #333;
-  font-family: "PT Sans Caption","游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", "メイリオ", sans-serif;
+  font-family: 'PT Sans Caption','PT Sans','ヒラギノ角ゴ Pro W3',' Hiragino Kaku Gothic Pro', 'MeiryoUI', 'MSUIGothic', 'メイリオ', 'Meiryo', 'ＭＳＰゴシック', sans-serif;
+  line-height: 1.8;
+  letter-spacing: 0.5rem;
   margin: 0;
 }
 
@@ -31,12 +33,19 @@ body {
   margin: 0 auto;
 }
 
-li {
+ul {
   list-style: none;
 }
 
 a {
   text-decoration: none;
+  cursor: pointer;
+  color: #333;
+}
+
+h2 {
+  font-size: 4.5rem;
+  margin-bottom: 30px;
 }
 
 /* * * * * * * * *
@@ -56,6 +65,94 @@ img {
   margin: 0;
   padding: 0;
   vertical-align: top;
+}
+
+.sub_t {
+  font-size: 2rem;
+  letter-spacing: 1.2rem;
+}
+
+/* * * * * * * * *
+*	Sass 定義
+* * * * * * * * */
+/*	button
+-------------------------------*/
+.btn-3 a {
+  display: block;
+  position: relative;
+  margin: 0 auto;
+  padding: 1em 2em;
+  width: 300px;
+  color: #333;
+  font-size: 1.6rem;
+  background-color: white;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.btn-3 a::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: -35px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 70px;
+  height: 2px;
+  background-color: #2285b1;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.btn-3 a:hover {
+  text-decoration: none;
+  background-color: #ccc;
+}
+
+.btn-3 a:hover::after {
+  -webkit-transform: translateX(3px);
+          transform: translateX(3px);
+}
+
+/*	btn-4 白から黒
+-------------------------------*/
+.btn-4 a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 auto;
+  padding: 1em 2em;
+  width: 300px;
+  color: #000000;
+  font-size: 18px;
+  border: 4px solid #000000;
+}
+
+.btn-4 a::after {
+  content: '';
+  width: 5px;
+  height: 5px;
+  border-top: 3px solid #333;
+  border-right: 3px solid #333;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.btn-4 a:hover {
+  color: #fff;
+  text-decoration: none;
+  background-color: #333;
+}
+
+.btn-4 a:hover::after {
+  border-top: 3px solid #fff;
+  border-right: 3px solid #fff;
 }
 
 /* * * * * * * * *
@@ -87,8 +184,14 @@ header .inner .nav h1 img {
   height: 60px;
 }
 
+.nav_li {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .nav_li ul {
-  font-size: 1.8rem;
+  font-size: 1.3rem;
   font-weight: bold;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -96,7 +199,7 @@ header .inner .nav h1 img {
 }
 
 .nav_li ul li {
-  margin-right: 36px;
+  margin-right: 30px;
 }
 
 .nav_li ul li a {
@@ -115,11 +218,10 @@ header .inner .nav h1 img {
 }
 
 #aboutus h2 {
-  font-size: 5rem;
   margin-bottom: 20px;
 }
 
-#aboutus #aap {
+#aboutus .aap {
   font-size: 2rem;
   letter-spacing: 1.2rem;
 }
@@ -149,7 +251,6 @@ header .inner .nav h1 img {
 #aboutus_a #aboutus_b #ap {
   margin-top: -110px;
   font-size: 3.3rem;
-  font-weight: bold;
   line-height: 1.8;
   letter-spacing: 1.7rem;
 }
@@ -173,6 +274,114 @@ header .inner .nav h1 img {
 *	main news
 * * * * * * * * */
 #news {
-  margin-top: 100px;
+  background-color: #F5F8F6;
+  margin-top: 200px;
+  padding: 60px;
+}
+
+#news #news_a p {
+  margin-bottom: 35px;
+  font-size: 1.6rem;
+  letter-spacing: .38rem;
+}
+
+#news #news_a p span {
+  font-weight: bold;
+  margin-right: 35px;
+}
+
+.btn-1 {
+  padding: 15px 45px;
+  border: solid;
+  font-size: 1.7rem;
+}
+
+.tandb {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+/* * * * * * * * *
+*	main Photo
+* * * * * * * * */
+#photo {
+  margin-top: 200px;
+}
+
+#photo h2 {
+  margin-bottom: 35px;
+  text-align: center;
+}
+
+#photo .photo_bp {
+  text-align: center;
+}
+
+#photo .btn-4 {
+  float: right;
+}
+
+#photo_b {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 74px;
+}
+
+#photo_b img {
+  width: 310px;
+  margin-bottom: 37px;
+  height: 310px;
+}
+
+/* * * * * * * * *
+*	main Online shop
+* * * * * * * * */
+#online_s {
+  margin: 250px 0;
+  padding-top: 30px;
+  background-color: #F5F8F6;
+}
+
+#online_s #onl_p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 70px 50px 0 0;
+  padding-bottom: 70px;
+}
+
+#online_s #onl_p img {
+  width: 500px;
+  height: 320px;
+}
+
+#online_s #onl_p #onl_pp {
+  font-size: 1.7rem;
+  line-height: 2.5;
+  text-align: center;
+}
+
+#online_s #onl_p #onl_pp p {
+  margin-bottom: 40px;
 }
 /*# sourceMappingURL=style.css.map */
