--- a/css/style.scss
+++ b/css/style.scss
@@ -1,52 +1,6 @@
 @charset "UTF-8";
-/* * * * * * * * *
-*	base
-* * * * * * * * */
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-html {
-  font-size: 62.5%;
-}
-img {
-  max-width: 100%;
-}
-body {
-  color: #333;
-  font-family:"PT Sans Caption","游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", "メイリオ", sans-serif;
-  margin: 0;
-}
-.container {
-  max-width: 1920px;
-  margin: 0 auto;
-}
-.inner {
-  max-width: 1080px;
-  margin: 0 auto;
-  // background: skyblue;
-}
-li {
-  list-style: none;
-}
-a {
-  text-decoration: none;
-}
-/* * * * * * * * *
-*	reset
-* * * * * * * * */
-h1,h2,h3,h4,h5,h6 {
-  margin: 0;
-  padding: 0;
-}
-p {
-  margin: 0;
-  padding: 0;
-}
-img {
-  margin: 0;
-  padding: 0;
-  vertical-align: top;
-}
+@import "preset";
+
 /* * * * * * * * *
 *	ヘッダー
 * * * * * * * * */
@@ -70,12 +24,13 @@ header {
 }
 // ヘッダーナビ
 .nav_li {
+  align-items: center;
   ul {
-    font-size: 1.8rem;
+    font-size: 1.3rem;
     font-weight: bold;
     display: flex;
     li {
-      margin-right: 36px;
+      margin-right: 30px;
       a {
       color: rgb(255, 255, 255);
         img {
@@ -85,17 +40,15 @@ header {
     }
   }
 }
-
 /* * * * * * * * *
 *	main about_us
 * * * * * * * * */
 #aboutus {
   margin-top: 152px;
   h2 {
-    font-size: 5rem;
     margin-bottom: 20px;
   }
-  #aap {
+  .aap {
     font-size: 2rem;
     letter-spacing: 1.2rem;
   }
@@ -115,7 +68,6 @@ header {
     #ap {
       margin-top: -110px;
       font-size: 3.3rem;
-      font-weight: bold;
       line-height: 1.8;
       letter-spacing: 1.7rem;
     }
@@ -137,5 +89,83 @@ header {
 *	main news
 * * * * * * * * */
 #news {
-  margin-top: 100px;
+  background-color: $ucafe-color;
+  margin-top: 200px;
+  padding: 60px;
+  #news_a {
+    p{
+      margin-bottom: 35px;
+      font-size: 1.6rem;
+      letter-spacing: .38rem;
+      span {
+        font-weight: bold;
+        margin-right: 35px;
+      }
+    }
+  }
+}
+.btn-1 {
+  @include btn-1;
+}
+.tandb {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+/* * * * * * * * *
+*	main Photo
+* * * * * * * * */
+#photo {
+  margin-top: 200px;
+  h2 {
+    margin-bottom: 35px;
+    text-align: center;
+  }
+  .photo_bp {
+    text-align: center;
+  }
+  .btn-4 {
+    float: right;
+  }
+}
+//写真一覧
+#photo_b {
+  // clear: both;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 74px;
+  img {
+    width: 310px;
+    margin-bottom: 37px;
+    height: 310px;
+  }
+}
+/* * * * * * * * *
+*	main Online shop
+* * * * * * * * */
+#online_s {
+  margin: 250px 0;
+  padding-top: 30px;
+  background-color: $ucafe-color;
+  #onl_p {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 70px 50px 0 0;
+    padding-bottom: 70px;
+    img {
+      width: 500px;
+      height: 320px;
+    }
+    #onl_pp {
+      font-size: 1.7rem;
+      line-height: 2.5;
+      text-align: center;
+      p {
+        margin-bottom: 40px;
+      }
+    }
+  }
 }
