--- a/css/style.scss
+++ b/css/style.scss
@@ -169,3 +169,48 @@ header {
     }
   }
 }
+/* * * * * * * * *
+*	main access
+* * * * * * * * */
+.inner{
+  // background-color: pink;
+}
+#access {
+  margin-bottom: 200px;
+  line-height: 2.3;
+  font-size: 1.6rem;
+  #acc_a {
+    display: inline-block;
+    // background-color: pink;
+    width: 540px;
+    #a_p2{
+      margin-top: 13px;
+      #a_pa {
+        text-decoration: underline;
+        color: $u-green;
+        &:hover {
+          color: $u-litegreen;
+        }
+      }
+    }
+    #a_p3 {
+      margin-top: 35px;
+      font-weight: bold;
+      font-size: 1.6em;
+    }
+    a{
+      text-decoration: underline;
+      color: $u-green;
+      &:hover {
+        color: $u-litegreen;
+      }
+    }
+    ul li span{
+      font-weight: bold;
+    }
+  }
+  img {
+    width: 400px;
+    margin: 200px 0 0 120px;
+  }
+}
