--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,126 @@ img {
 *	Sass 定義
 * * * * * * * * */
 /* * * * * * * * *
+*	header
+* * * * * * * * */
+header .inner .nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 105px;
+}
+
+header .inner .nav h1 img {
+  width: 180px;
+  height: 60px;
+}
+
+.nav_li {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav_li ul {
+  font-size: 1.3rem;
+  font-weight: bold;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.nav_li ul li {
+  position: relative;
+  margin-right: 30px;
+}
+
+.nav_li ul li a {
+  color: white;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.nav_li ul li a img {
+  width: 20px;
+}
+
+.insta_hov {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.insta_hov:hover {
+  opacity: 1;
+}
+
+/* * * * * * * * *
+*	footer
+* * * * * * * * */
+.main_contact {
+  text-align: center;
+}
+
+.main_con_i {
+  width: 150px;
+  margin-bottom: 15px;
+}
+
+.main_con_p {
+  letter-spacing: .8rem;
+  font-size: 2rem;
+  margin-bottom: 100px;
+}
+
+.main_con_i_1 {
+  width: 960px;
+  height: 553px;
+  background-image: url(../img/kari/coffee.jpg);
+  background-size: cover;
+  background-position: center bottom 23%;
+  float: left;
+}
+
+.main_con_i_2 {
+  width: 960px;
+  height: 553px;
+  background-image: url(../img/kari/cakea.jpg);
+  background-size: cover;
+  background-position: center bottom 30%;
+  float: left;
+}
+
+.clear {
+  clear: both;
+}
+
+.con_3 {
+  width: 280px;
+}
+
+.con_4 {
+  border-top: 3px solid #000;
+}
+
+/* * * * * * * * *
+*	footer
+* * * * * * * * */
+footer {
+  text-align: center;
+  margin: 30px 0;
+  font-size: 1.4rem;
+}
+
+/* * * * * * * * *
 *	共通事項
 * * * * * * * * */
 /*	button 右に横棒がついているもの
@@ -264,74 +384,14 @@ img {
 }
 
 /* * * * * * * * *
-*	ヘッダー
+*	header
 * * * * * * * * */
-header {
+.head-img {
   width: 100%;
   height: 900px;
   background-size: cover;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), url(../img/kari/header.jpg);
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/kari/header.jpg);
-}
-
-header .inner .nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: 105px;
-}
-
-header .inner .nav h1 img {
-  width: 180px;
-  height: 60px;
-}
-
-.nav_li {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.nav_li ul {
-  font-size: 1.3rem;
-  font-weight: bold;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.nav_li ul li {
-  position: relative;
-  margin-right: 30px;
-}
-
-.nav_li ul li a {
-  color: white;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.nav_li ul li a img {
-  width: 20px;
-}
-
-.insta_hov {
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.insta_hov:hover {
-  opacity: 1;
 }
 
 /* * * * * * * * *
@@ -554,60 +614,9 @@ header .inner .nav h1 img {
   margin: 200px 0 0 120px;
 }
 
+/*   photo
+--------------------------------------------------------------------------*/
 /* * * * * * * * *
-*	main contact 共通
+*	photo
 * * * * * * * * */
-.main_contact {
-  text-align: center;
-}
-
-.main_con_i {
-  width: 150px;
-  margin-bottom: 15px;
-}
-
-.main_con_p {
-  letter-spacing: .8rem;
-  font-size: 2rem;
-  margin-bottom: 100px;
-}
-
-.main_con_i_1 {
-  width: 960px;
-  height: 553px;
-  background-image: url(../img/kari/coffee.jpg);
-  background-size: cover;
-  background-position: center bottom 23%;
-  float: left;
-}
-
-.main_con_i_2 {
-  width: 960px;
-  height: 553px;
-  background-image: url(../img/kari/cakea.jpg);
-  background-size: cover;
-  background-position: center bottom 30%;
-  float: left;
-}
-
-.clear {
-  clear: both;
-}
-
-.con_3 {
-  width: 280px;
-}
-
-.con_4 {
-  border-top: 3px solid #000;
-}
-
-/* * * * * * * * *
-*	footer
-* * * * * * * * */
-footer {
-  text-align: center;
-  margin: 30px 0;
-  font-size: 1.4rem;
-}
 /*# sourceMappingURL=style.css.map */
